<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <RelativeLayout
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/headimg_bg"
        android:layout_gravity="center_horizontal"
        >
        <com.sxzhwts.ticket.project.ui.AvatarImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logohead"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/accounticon"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userAccount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account"
            android:textSize="16sp"
            android:lines="1"
            android:paddingLeft="15dp"
            android:paddingBottom="19dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@null"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwdicon"
            android:textSize="30sp"
            android:textColor="@color/white"/>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userPwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pwd"
            android:textSize="16sp"
            android:lines="1"
            android:paddingTop="12dp"
            android:paddingLeft="15dp"
            android:paddingBottom="19dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:background="@null"/>
    </LinearLayout>


<android.support.v7.widget.AppCompatTextView
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:text="登录"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:layout_marginTop="25dp"
    android:gravity="center"
    android:background="@drawable/shape_login"/>
</LinearLayout>
