<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drwerLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="19sp" />
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:id="@+id/title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:textColor="@color/white"
            android:text="@string/accounticon"
            android:padding="8dp"
            android:textSize="25sp"
            android:visibility="visible"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">



            <FrameLayout
                android:id="@+id/allOrderll"
               android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                >
                <RelativeLayout

                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_sure">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        >
                        <com.sxzhwts.ticket.project.ui.IconTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zongorder"
                            android:textColor="@color/white"
                            android:layout_centerInParent="true"
                            />
                    </LinearLayout>
                </RelativeLayout>
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/allOrderSum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:background="@drawable/shape_ordernum"
                    android:layout_gravity="right|top"/>
   </FrameLayout>


        <View
            android:layout_width="20dp"
            android:layout_height="match_parent"/>
        <FrameLayout
            android:id="@+id/readSurell"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_sure">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    >
                    <com.sxzhwts.ticket.project.ui.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sureicon"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center_horizontal"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/readSure"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        />
                </LinearLayout>
            </RelativeLayout>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/readSureSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/shape_ordernum"
                android:layout_gravity="right|top"/>
        </FrameLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codeinput"
        android:layout_marginTop="27dp"
        android:textColor="@color/textcolor"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/shape_code"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/hexiaoCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:paddingLeft="12dp"
            android:textColor="@color/textcolor"
            android:layout_height="match_parent" />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/sureCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sure"
            android:textColor="@color/white"
            android:padding="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/bg_gray"/>
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/scancode"
            android:padding="8dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="10dp"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="最新订单"
        android:textColor="@color/textcolor"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/notice"
        android:layout_marginStart="15dp"
        android:drawablePadding="10dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
       />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/newOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
<LinearLayout
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_gravity="left"
    android:background="@color/colorPrimary"
   >
    <RelativeLayout
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/headimg_bg"
        android:layout_gravity="center_horizontal"
        >
        <com.sxzhwts.ticket.project.ui.AvatarImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logohead"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="45dp">
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingicon"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_gravity="center_vertical"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <LinearLayout
        android:id="@+id/changePwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
       >
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwdicon"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_gravity="center_vertical"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/changepwd"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawablePadding="15dp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <LinearLayout
        android:id="@+id/allOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.sxzhwts.ticket.project.ui.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_gravity="center_vertical"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/allorder"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:drawablePadding="15dp"
            android:layout_marginStart="10dp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/allOrderSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/shape_ordernum"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/loginOut"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/exitlogin"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:gravity="center"
        android:background="@drawable/shape_login"/>
</LinearLayout>
   

</android.support.v4.widget.DrawerLayout>
